Visual fixes for better responsive design on smaller screens

--- a/style.css
+++ b/style.css
@@ -79,13 +79,17 @@ input {
     display: flex;
     margin: auto;
     justify-content: space-between;
-    padding: 5px 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
     border-radius: 0.75rem;
     margin-bottom: 0.75rem;
 }
 
 .task-txt {
     color: #eee;
+    width:100%;
+    border: 0px solid red;
 }
 
 .task input[type="button"]:hover {
@@ -98,6 +102,8 @@ input {
 
 .edit-btn {
     padding: 0.5rem;
+    border: 0px solid green;
+    margin-left: 1rem;
 }
 
 .del-btn {
@@ -105,4 +111,10 @@ input {
     font-weight: 700;
     cursor: pointer;
     padding: 0.5rem;
+    border: 0px solid blue;
+    margin-right: 0.75rem;
+}
+
+.action-btns {
+    display: flex;
 }
